# phase1

./: .gitignore  AI_GINA.md  AI_GINA_ROADMAP.md  AVIM.md  AVIM_PRO.md  CHANGELOG.md  CHECKPOINT_REPO_DOCTRINE_EDGE_STABLE.md  CODE_REVIEW.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Cargo.toml.v3.bak  DEVELOPMENT_CHECKPOINT_BASE1_RECOVERY_USB_READONLY_V1.md  DEVELOPMENT_CHECKPOINT_EDGE_4_3_0_DEV.md  DEVELOPMENT_CHECKPOINT_EDGE_4_4_0_DEV.md  DEVELOPMENT_CHECKPOINT_EDGE_5_0_0.md  DEVELOPMENT_CHECKPOINT_EDGE_5_1_0.md  DEVELOPMENT_CHECKPOINT_EDGE_6_0_0.md  DEVELOPMENT_CHECKPOINT_LEARN.md  DEV_DOCK.md  DEV_NOTES.txt  DOCS_SYNC_CHECKPOINT.md  EDGE.md  EDGE_STABLE_CHECKPOINT.md  FEATURE_STATUS.md  FOCUS.md  GAME_DEV.md  GO_TESTING.md  JESSE_GO_TESTING.md  LANGUAGE_RUNTIME.md  LAUNCH.md  LEARNING.md  NEXT_UPDATE_v3.7.0.md  NEXT_UPDATE_v3.8.0.md  OPERATOR_SHELL.md  PHASE1_EMACS.md  PHASE1_NATIVE_LANGUAGE.md  QUALITY.md  QUALITY_AUDIT.md  QUALITY_SCORECARD.md  (+39 more)
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
assets/: README.md
base1/: HARDWARE_TARGETS.md  LIBREBOOT_COMMAND_INDEX.md  LIBREBOOT_DOCS_SUMMARY.md  LIBREBOOT_GRUB_RECOVERY.md  LIBREBOOT_MILESTONE.md  LIBREBOOT_OPERATOR_CHECKLIST.md  LIBREBOOT_PREFLIGHT.md  LIBREBOOT_PROFILE.md  LIBREBOOT_QUICKSTART.md  LIBREBOOT_VALIDATION_REPORT.md  NETWORK_LOCKDOWN_DRY_RUN.md  PHASE1_COMPATIBILITY.md  README.md  RECOVERY_USB_COMMAND_INDEX.md  RECOVERY_USB_DESIGN.md  RECOVERY_USB_EMERGENCY_SHELL.md  RECOVERY_USB_EMERGENCY_SHELL_COMMAND_INDEX.md  RECOVERY_USB_EMERGENCY_SHELL_SUMMARY.md  ROADMAP.md  (+10 more)
(+1078 files in other folders)
