[package]
name = "phase1"
version = "3.7.0"
edition = "2021"
authors = ["Chase Bryan"]
description = "Terminal-first educational virtual OS console in Rust."
license = "GPL-3.0"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
