[package]
name = "phase1"
version = "3.10.9-dev"
edition = "2021"
default-run = "phase1"
authors = ["Chase Bryan"]
description = "Terminal-first educational virtual OS console in Rust."
license = "GPL-3.0"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
