[package]
name = "phase1"
version = "4.2.5-dev"
edition = "2021"
default-run = "phase1"
authors = ["Chase Bryan"]
description = "Terminal-first educational virtual OS console in Rust."
license = "GPL-3.0-only"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.clippy]
# Rust 1.95 tightened several style lints that do not change Phase1 behavior.
# Keep the quality gate stable while these areas are refactored in the next pass.
collapsible_match = "allow"
iter_skip_next = "allow"
manual_contains = "allow"
never_loop = "allow"
question_mark = "allow"
unnecessary_lazy_evaluations = "allow"

[dependencies]

[workspace]
members = [".", "phase1-core", "xtask"]
resolver = "2"
